Ajout collapse footer pour report bug
- footer.blade.php : ajout d'un bouton collapse pour le report de bug (envoi sur le git pour les membres only), renvoi pour tous les membres sur le discord avec la mention @Site.
- master.css : modif graphique pour l'affichage du tableau des missions sur téléphone, et pour le bouton collapse report bug.

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -202,6 +202,23 @@ footer i {
     padding-right: 6px;
 }
 
+.fa-question {
+    padding: 0 !important;
+}
+
+footer i.fas{
+    margin: 0 !important;
+}
+
+footer .card-body {
+    border: none;
+    font-size: 20px;
+}
+
+footer .card-body p {
+    margin-bottom: 0;
+}
+
 /*-- content --*/
 .bg-dark {
     background-color: rgba(10, 10, 10, 0.6) !important;
@@ -216,13 +233,25 @@ footer i {
     padding: 4%;
 }
 
-.col-4.border-on {
-    margin-right: 10%;
+.col-2 {
+    -ms-flex: 0 0 16.666667%;
+    flex: inherit;
+    max-width: inherit;
 }
 
 @media (min-width: 992px) {
     section.container {
         padding: 0;
+    }
+
+    .col-2 {
+        -ms-flex: 0 0 16.666667%;        
+        flex: initial;
+        max-width: initial;
+    }
+
+    .col-md-8 {
+        max-width: 66.666667%;
     }
 
     footer .container {
@@ -265,6 +294,14 @@ footer i {
     .col-md-0 {
         flex: 0 0 8%;
         max-width: 9%;
+    }
+
+    .col-4.border-on {
+        margin-right: 10%;
+    }
+
+    .accordion .list-group-item {
+        padding: inherit;
     }
 }
 
@@ -382,6 +419,10 @@ li.list-group-item{
     border-color: rgba(111,16,10, 0.6);
 }
 
+.accordion .list-group-item {
+    padding: 0;
+}
+
 samp {
     font-size: 1.3rem;
 }
@@ -436,4 +477,9 @@ details {
 
 a:not([href]):not([tabindex]):hover {
     cursor: pointer;
+}
+
+.discord-site {
+    color: rgb(113, 54, 138);
+    background-color: rgba(113, 54, 138, 0.1);
 }
